# Cmake-demo

./: Template.7z
doc/: README.md
src/: CMakeLists.txt  main.c  main.cpp
src/app/: CMakeLists.txt  app.c  app.h
src/app/App1/: CmakeLists.txt  app.c  app.h  app_test.c
src/app/App2/: CmakeLists.txt  app2.c  app2.h  app_test2.c
src/calc/: CMakeLists.txt  addition.c  addition.h  subtract.c  subtract.h
src/platform/: CmakeLists.txt
src/platform/common/: head.h
src/platform/dio/: CmakeLists.txt  dio.c  dio.h
src/platform/port/: CmakeLists.txt  port.c  port.h
tool/template/: config.h.in
